# verificacoes-github-splor-mg

./: .copier_answers.yml  .env.example  .gitignore  README.md  _temp.md  _temp2.md  commit.md  env.example  labels.yaml  main.py  pyproject.toml
.github/workflows/: issues-close-date.yml  labels-sync.yml  labels-update.yml
config/: issues-types.yml  labels.yaml  projects-panels-info.yml  repos_list.csv  status.yml
docs/: README.md  cache-manager.md  github-app-auth.md  issues-close-date.md  labels-sync.md  labels.yaml  projects-panels-list.yml  projects-panels-splor.yml  projects-panels.md  projects-panels.yml  repos-list.md  repos_list.csv
docs/examples/: workflows.md
docs/guides/: advanced-usage.md  setup.md
logs/: README.md
scripts/: cache_manager.py  github_app_auth.py  issues_close_date.py  labels_sync.py  projects_panels.py  repos_list.py  update_workflow_options.py
verificacoes_github_splor_mg/: README_LABELS.md  custom_labels.py  labels_manager.py  main.py  sync_labels.py  test_labels.py  yaml_to_labels.py
