[tool.poetry]
name = "verificacoes-github-splor-mg"
version = "0.1.0"
description = "GitHub Organization Management Tool"
authors = ["splor-mg"]
readme = "README.md"
packages = [{include = "scripts", from = "."}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
PyYAML = "^6.0"
PyJWT = "^2.9.0"
cryptography = "^43.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
taskipy = "^1.14.1"

[tool.poetry.scripts]
github-org-manager = "main:main"


[tool.taskipy.tasks]
# Task principal que executa todas as outras
all = { cmd = """
task repos-list &&
task projects-panels-list &&
task projects-panels-info &&
task sync-labels &&
task issues-close-date
""", help = "Executa: repos-list, projects-panels-list, projects-panels-info, sync-labels e issues-close-date (nesta ordem)" }

# Tasks centrais para gerenciamento do GitHub
repos-list = { cmd = "python main.py --repos-list", help = "Lista todos os repositórios da organização e salva em config/repos_list.csv" }
projects-panels-list = { cmd = "python main.py --projects-panels-list", help = "Atualiza lista de projetos GitHub (projects-panels-list.yml)" }
projects-panels-info = { cmd = "python main.py --projects-panels-info", help = "Atualiza dados completos dos painéis de projetos GitHub (projects-panels-info.yml)" }
sync-labels = { cmd = "python main.py --sync-labels", help = "Sincroniza labels em todos os repositórios da organização (modo conservador)" }
issues-close-date = { cmd = "python main.py --issues-close-date", help = "Gerencia campo Data Fim em projetos GitHub de issues atualizados nos últimos 7 dias" }


# Tasks de personalização avançada
# Painéis de projetos
projects-panels-update = { cmd = "python main.py --projects-panels-update", help = "Atualiza ambos os arquivos de painéis de projetos (info e lista)" }
# Labels
sync-labels-custom = { cmd = "python main.py --labels", help = "Usa arquivo de labels customizado (use: task sync-labels-custom /caminho/labels.yaml)" }
sync-labels-delete-extras = { cmd = "python main.py --sync-labels --delete-extras", help = "Sincroniza labels e remove labels extras (modo completo)" }
sync-labels-repos = { cmd = "python main.py --repos", help = "Sincroniza labels em repositórios específicos (use: task sync-labels-repos repo1,repo2)" }
# Issues
issues-close-date-all = { cmd = "python main.py --issues-close-date --issues-all", help = "Gerencia campo Data Fim em projetos GitHub de todos os issues" }
issues-close-date-days = { cmd = "python main.py --issues-close-date --issues-days", help = "Gerencia campo Data Fim em projetos GitHub de issues atualizados nos últimos N dias (ex: task issues-close-date-days 30 para últimos 30 dias)" }
issues-close-date-panel = { cmd = "python main.py --issues-close-date-panel", help = "Seleção interativa de painel de projeto para gerenciar issues (close-date)" }
issues-close-date-panels = { cmd = "python main.py --issues-close-date-panels", help = "Gerencia issues (close-date) em paineis de projetos específicos (use: task issues-close-date-panels 1,2,3)" }
issues-close-date-field = { cmd = "python main.py --issues-close-date-field", help = "Usa campo customizado para issues (close-date) (use: task issues-close-date-field 'Data Conclusão')" }


# Tasks combinadas
panels-and-issues = { cmd = "python main.py --projects-panels-info --issues-close-date-panel", help = "Atualiza projetos e gerencia issues (close-date) com seleção interativa" }
update-workflow-options = { cmd = "python scripts/update_workflow_options.py", help = "Atualiza opções de projetos no workflow GitHub Actions dinamicamente" }
verbose = { cmd = "python main.py --verbose", help = "Executa com logs detalhados e verbosos" }

# Tasks de setup
install-dev = "poetry install --with dev"
update-deps = "poetry update"
lock = "poetry lock"
install = "poetry install"

# Tasks de desenvolvimento
dev = "python main.py --all --verbose"
test = "pytest"
test-cov = "pytest --cov=scripts --cov-report=html"
format = "black ."
lint = "flake8 ."
type-check = "mypy ."
check-all = "task format && task lint && task type-check && task test"

# Tasks de limpeza
clean = "find . -type f -name '*.pyc' -delete && find . -type d -name '__pycache__' -delete && find . -type d -name '*.egg-info' -exec rm -rf {} +"
clean-logs = "rm -f *.log"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8.1"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=scripts --cov-report=term-missing --cov-report=html"
